--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,9 @@
     "api/*.php": {
       "runtime": "vercel-php@0.5.2"
     }
+    "api/**/*.php": {
+      "excludeFiles": "public/**"
+    }
   },
   "routes": [
     { "src": "/(.*)",  "dest": "/api/index.php" }
